<resources>
    <string name="app_name">CryptoTradensen</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="usernameHint">Correo Electrónico</string>
    <string name="passHint">Contraseña</string>
    <string name="btnlogin">INICIAR SESIÓN</string>
    <string name="dontHaveAccount">¿Sin una Cuenta?-</string>
    <string name="createHere">--Crea una Aquí!</string>
    <string name="createEmailHint">Correo Electrónico</string>
    <string name="createNameHint">Nombre</string>
    <string name="createPasswordHint">Contraseña</string>
    <string name="retypePasswordHint">Confirma contraseña</string>
    <string name="btnCreateAccount">ÚNETE</string>
    <string name="createAccountTitle">Crear Cuenta</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="btnCuentas">CUENTAS</string>
    <string name="btnInversiones">INVERSIONES</string>
    <string name="menuPrincipal">Menu Principal</string>
    <string name="cuentas">Cuentas</string>
    <string name="datosCuenta">DATOS DE CUENTA</string>
    <string name="nombreCuentaHint">Nombre de Cuenta</string>
    <string name="capitalHint">Capital (COP)</string>
    <string name="hintDateTextView"> Fecha</string>
    <string name="datosContacto">CONTACTO</string>
    <string name="nombreContactoHint">Nombre de Contacto</string>
    <string name="telefonoHint">Teléfono</string>
    <string name="emailHint">Correo Electrónico</string>
    <string name="direccionHint">Dirección</string>
    <string name="numeroDocumentoHint">Número de Documento</string>
    <string name="cc">CC</string>
    <string name="ce">CE</string>
    <string name="tipoDocumento">Tipo de Documento</string>
    <string name="pa">Pasaporte</string>
    <string name="datosBancarios">INFORMACIÓN BANCARIA</string>
    <string name="spinnerBancos">SELECCIONE BANCO</string>
    <string name="avVillas">AV VILLAS</string>
    <string name="bancolombia">BANCOLOMBIA</string>
    <string name="bbva">BBVA</string>
    <string name="bancoPopular">BANCO POPULAR</string>
    <string name="bancoSantander">BANCO SANTANDER</string>
    <string name="citibank">CITIBANK</string>
    <string name="davivienda">DAVIVIENDA</string>
    <string name="bancoBogota">BANCO DE BOGOTÁ</string>
    <string name="serviBanca">SERVIBANCA</string>
    <string name="spinnerSeleccion">Seleccionado_</string>
    <string name="otroBanco">Otro Banco...</string>
    <string name="otrosBancos">Escriba el nombre del Banco</string>
    <string name="tipoCuenta">TIPO DE CUENTA</string>
    <string name="ahorros">AHORROS</string>
    <string name="corriente">CORRIENTE</string>
    <string name="btc">BTC</string>
    <string name="okpay">OKPAY</string>
    <string name="payeer">PAYEER</string>
    <string name="perfectMoney">PERFECT MONEY</string>
    <string name="btnTextDate">FECHA DE APERTURA</string>
    <string name="otraCuenta">Otro tipo de cuenta...</string>
    <string name="otrosTiposCuenta">Escriba el tipo de Cuenta</string>
    <string name="notas">NOTAS</string>
    <string name="numeroCuentaHint">Número de Cuenta</string>
    <string name="notasDetallesHint"><![CDATA[Escriba aquí >>>]]></string>
    <string name="btnNuevacuenta">CREAR</string>
    <string name="Nuevacuenta">Crear Cuenta</string>
    <string name="btnhistorial">HISTORIAL</string>
    <string name="validation">Por favor diligencie todos los campos</string>
    <string name="validation2">Error, verifique e intente de nuevo</string>
    <string name="validation3">Inicio de Sesión Exitoso</string>
    <string name="validation4">Estas logueado</string>
    <string name="btnSignout">CERRAR SESIÓN</string>
    <string name="cargando">Registrando, por favor espere...</string>
    <string name="registrado">Registro Exitoso!</string>
    <string name="cargando2">Cargando, por favor espere...</string>

</resources>
