<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cemg199.cryptotradensen.CreateAccountRegistry">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_action_back"
                />


            <TextView
                android:layout_marginTop="20dp"
                android:textSize="@dimen/EditTextSize2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffd700"
                android:text="@string/datosCuenta"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopCreateAcount">

                <android.support.design.widget.TextInputEditText
                    android:theme="@style/EditText"
                    android:id="@+id/etNombreCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreCuentaHint"
                    android:inputType="text"
                    android:textSize="@dimen/EditTextSize2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopCreateAcount">

                <android.support.design.widget.TextInputEditText
                    android:theme="@style/EditText"
                    android:id="@+id/etCapitalCop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/capitalHint"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/EditTextSize2" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:textSize="@dimen/EditTextSize2"
                    android:id="@+id/btnDatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnTextDate"
                    android:onClick="datePicker"
                    />

                <TextView
                    android:textSize="@dimen/fechaSize"
                    android:id="@+id/timeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/paddingDate"
                    android:layout_toRightOf="@id/btnDatePicker"
                    android:hint="@string/hintDateTextView" />

            </RelativeLayout>

            <TextView
                android:layout_marginTop="50dp"
                android:textSize="@dimen/EditTextSize2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffd700"
                android:text="@string/datosContacto"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopCreateAcount">

                <android.support.design.widget.TextInputEditText
                    android:theme="@style/EditText"
                    android:id="@+id/etNombreContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreContactoHint"
                    android:inputType="text"
                    android:textSize="@dimen/EditTextSize2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopCreateAcount">

                <android.support.design.widget.TextInputEditText
                    android:theme="@style/EditText"
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefonoHint"
                    android:inputType="number"
                    android:textSize="@dimen/EditTextSize2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopCreateAcount">

                <android.support.design.widget.TextInputEditText
                    android:theme="@style/EditText"
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailHint"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/EditTextSize2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopCreateAcount">

                <android.support.design.widget.TextInputEditText
                    android:theme="@style/EditText"
                    android:id="@+id/etDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccionHint"
                    android:inputType="text"
                    android:textSize="@dimen/EditTextSize2" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:textSize="@dimen/EditTextSize2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipoDocumento"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/tipoDocumentoRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <RadioButton
                    android:textSize="@dimen/EditTextSize2"
                    android:id="@+id/cc"
                    android:text="@string/cc"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <RadioButton
                    android:textSize="@dimen/EditTextSize2"
                    android:id="@+id/ce"
                    android:text="@string/ce"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    />

                <RadioButton
                    android:textSize="@dimen/EditTextSize2"
                    android:id="@+id/pa"
                    android:text="@string/pa"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopCreateAcount">

                <android.support.design.widget.TextInputEditText
                    android:theme="@style/EditText"
                    android:id="@+id/etNumeroDocumento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numeroDocumentoHint"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/EditTextSize2" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="50dp"
                android:textSize="@dimen/EditTextSize2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffd700"
                android:text="@string/datosBancarios"
                android:textStyle="bold" />

            <Spinner

                android:id="@+id/spinnerBancos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginBankSpinner" />

            <TextView
                android:textSize="@dimen/EditTextSize2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginBankSpinner"
                android:text="@string/otroBanco"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/otroBanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otrosBancos"
                android:textSize="@dimen/EditTextSize2" />

            <Spinner

                android:id="@+id/spinnerTipoCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginBankSpinner" />

            <TextView
                android:textSize="@dimen/EditTextSize2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMarginBankSpinner"
                android:text="@string/otraCuenta"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/otraCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otrosTiposCuenta"
                android:textSize="@dimen/EditTextSize2" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopCreateAcount">

                <android.support.design.widget.TextInputEditText
                    android:theme="@style/EditText"
                    android:id="@+id/etNumeroCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numeroCuentaHint"
                    android:inputType="number"
                    android:textSize="@dimen/EditTextSize2" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="50dp"
                android:textSize="@dimen/EditTextSize2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffd700"
                android:text="@string/notas"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopCreateAcount">

                <android.support.design.widget.TextInputEditText
                    android:theme="@style/EditText"
                    android:id="@+id/etNotasDetalles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notasDetallesHint"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/EditTextSize2" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnNuevacuenta"
                android:textSize="@dimen/textSizeEditTextWhiteStyle"
                android:theme="@style/RisedButtonDark"/>

        </LinearLayout>



    </ScrollView>


</android.support.design.widget.CoordinatorLayout>

